--- a/style2.css
+++ b/style2.css
@@ -10,12 +10,8 @@
 }
 .info {
     position: relative;
-    left: 16%;
-    top: 16%;
-    font-size: 30px;
-    width: 24%;
+    font-size: 25px;
     color: #fff;
-    margin-top: 4%;
 }
 
 /* projects */
@@ -113,9 +109,6 @@
 .skills {
     text-align: left;
     position: relative;
-    top: 28px;
-    left: 16%;
-    width:16%;
     font-size: 25px;
     color: #ffffff;
  
@@ -696,13 +689,10 @@ svg {
 }
 
 .face {
+    display:block;
     position:relative;
-    top: -217px;
-    left: 65%;
-    border-radius: 50%;
-    /* display: inline-block; */
+    border-radius: 20px;
     filter: drop-shadow(0px 3px 5px black);
-    overflow: hidden;
 }
 
 .porti {
