--- a/style2.css
+++ b/style2.css
@@ -8,52 +8,145 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-.info {
-    position: relative;
+.cool-stuff {
+    height:300px;
+}
+
+/* signature animation */
+svg {
+    position:relative;
+    top:50%;
+}
+#aiJGpFF8V {
+    stroke-dasharray:643;
+    stroke-dashoffset:-643;
+    animation: dash-first 1.1s linear forwards;
+    animation-delay:1s;
+}
+@keyframes dash-first {
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+#f1G9tOoBLK {
+    stroke-dasharray:1049;
+    stroke-dashoffset:-1049;
+    animation: dash-second 2s linear forwards;
+    animation-delay:2.4s;
+}
+@keyframes dash-second {
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+#b5gWfnHBtj {
+    stroke-dasharray:777;
+    stroke-dashoffset:-777;
+    animation: dash-third 2s linear forwards;
+    animation-delay:4.5s;
+}
+@keyframes dash-third {
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+#b2afMgsppt {
+    stroke-dasharray:627;
+    stroke-dashoffset:-627;
+    animation: dash-fourth 1.5s linear forwards;
+    animation-delay:6.5s;
+}
+@keyframes dash-fourth {
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+#eInj2OfBP {
+    stroke-dasharray:460;
+    stroke-dashoffset:-460;
+    animation: dash-fifth 1.5s linear forwards;
+    animation-delay:8.2s;
+}
+@keyframes dash-fifth {
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+.who {
+    font-family: 'Raleway', sans-serif;
+    margin-top: 2%;
+    margin-bottom: 1%;
+    text-decoration: underline;
     font-size: 25px;
     color: #fff;
 }
+.what {
+    font-family: 'Raleway', sans-serif;
+    margin-top: 2%;
+    margin-bottom: 1%;
+    text-decoration: underline;
+    font-size: 25px;
+    color: #ffffff;
+}
+.info {
+    font-family: 'Raleway', sans-serif;
+    font-size: 21px;
+    color: #fff;
+}
+
+.skills {
+    margin-bottom:5%;
+    font-family: 'Raleway', sans-serif;
+    font-size: 21px;
+    color: #ffffff;
+}
+.magic {
+    color:red;
+}
 
 /* projects */
-.projects {
-    /* display:inline; */
-}
+
 .asleep {
     display:block;
     background-image: url("random_grey2.png");
     height: 55%;
 }
 .speakup {
+
+}
+.speakup2 {
+    margin-top:2%;
+    color:#4d4d4d;
     position: relative;
-    display: inline-block;
-    font-size: 15px;
+    font-size: 22px;
     font-family: 'Raleway', sans-serif;
-    width: 13%;
-    left: 14%;
+}
+.more {
+    text-align: center;
+    margin:auto;
+    margin-bottom:1%;
+    color:#4d4d4d;
+    font-size: 22px;
+}
+.block {
+    margin-top:10%;
+    margin-bottom:10%;
+    width:40%;
+    border-bottom:4px solid #999;
 }
 .epicgg {
+    margin-top:2%;
+    color:#4d4d4d;
     position: relative;
-    font-size: 15px;
+    font-size: 22px;
     font-family: 'Raleway', sans-serif;
-    width: 13%;
-    display: inline-block;
-    left: 22%;
 }
-.tetris {
+.jambook2 {
+    margin-top:2%;
+    color:#4d4d4d;
     position: relative;
-    font-size: 15px;
+    font-size: 22px;
     font-family: 'Raleway', sans-serif;
-    width: 13%;
-    display: inline-block;
-    left: 37%;
-}
-.jambook {
-    position: relative;
-    font-size: 15px;
-    font-family: 'Raleway', sans-serif;
-    width: 13%;
-    display: inline-block;
-    left: 30%;
 }
 
 .ham {
@@ -77,42 +170,22 @@
     width: auto;
 }
 
-#about {
-    height:450px;
-    background-image: url("random_grey2.png");
+.about {
+    /* height:450px; */
+    background-color:#2F345C;
     font-size: 22px;
     font-family: 'Raleway', sans-serif;
     position: relative;
 
 }
 
-.mySkills {
-    text-decoration: underline;
-    display:inline;
-    text-align: left;
-    top: 0px;
-    left: 47%;
-    font-size: 40px;
-    color: #ffffff;
-    position: relative;
-}
 .resume {
-    text-align: center;
-    position: relative;
-    top: -528px;
-    left: 70%;
-    width: 25%;
-    font-size: 30px;
-    color: #ffffff;
+    margin-top:2%;
+    font-size: 22px;
+    color: #595959;
 }
 
-.skills {
-    text-align: left;
-    position: relative;
-    font-size: 25px;
-    color: #ffffff;
- 
-}
+
 
 .skills-animate {
     animation: show 0.5s ease-in forwards;
@@ -152,14 +225,11 @@
 }
 
 .btn-primary-outline,
-#learnMore {
-    color: #ffffff;
+.learnMore {
+    color: #595959;
     border-radius: 20px;
-    border: 2px solid #ffffff;
+    border: 2px solid #595959;
     background-color: transparent;
-    position: relative;
-    top:10%;
-    left:-2%;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -193,7 +263,6 @@
     font-family: 'Raleway', sans-serif;
     position: relative;
     top: 205px;
-    left: 13%;
     color: #ffffff;
     border-radius: 20px;
     border: 2px solid #ffffff;
@@ -202,7 +271,6 @@
     text-align: center;
     text-decoration: none;
     font-size: 25px;
-    margin: 4px 2px;
     cursor: pointer;
 }
 
@@ -242,7 +310,7 @@
     animation-delay: 2s;
 }
 
-.lanks,
+/* .lanks,
 li {
     filter: 0;
     word-spacing: 5px;
@@ -267,10 +335,10 @@ a:hover {
     border-top: 2px solid #ffffff;
     display: inline;
     padding-top: 10px;
-    /* position: relative;
+    position: relative;
     top: -50px;
-    left: -21%; */
-}
+    left: -21%;
+} */
 
 #fly1 {
     position: absolute;
@@ -471,13 +539,11 @@ a:hover {
 }
 
 .animations {
-    display: inline-block;
     text-align: center;
     color: #fff;
     font-size: 35px;
     position: relative;
     top:40px;
-    left:34%;
 }
 
 #star3 {
@@ -655,20 +721,22 @@ a:hover {
 .subname {
     text-align: center;
     font-size: 27px;
+    width:20%;
     margin:auto;
     margin-bottom: 2%;
-    width: 17%;
+    color:#595959;
     font-family: 'Domine', serif;
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid #595959;
 }
 .subname2 {
+    padding-top:2%;
     text-align: center;
     font-size: 27px;
-    visibility:hidden;
+    width:20%;
     margin:auto;
-    width: 90%;
-    font-family: 'Domine', serif;
+    margin-bottom: 2%;
     color:#fff;
+    font-family: 'Domine', serif;
     border-bottom: 3px solid #fff;
 }
 
@@ -681,11 +749,8 @@ svg {
 }
 
 .projects {
-    background-image:url("p4.png");
-    position: relative;
+    text-align: left;
     padding-top: 3%;
-    height: 485px;
-
 }
 
 .face {
@@ -695,16 +760,6 @@ svg {
     filter: drop-shadow(0px 3px 5px black);
 }
 
-.porti {
-    border-radius:10px;
-    margin-right: 20px;
-    filter: drop-shadow(0px 3px 5px black);
-
-}
-
-.porti:hover {
-    animation: filter-it .25s linear forwards;
-}
 
 @keyframes filter-it {
     100% {
