--- a/style2.css
+++ b/style2.css
@@ -243,6 +243,19 @@ svg {
     margin: 4px 2px;
     cursor: pointer;
 }
+.btn-primary-outline,
+.learnMore {
+    color: #ffffff;
+    border-radius: 20px;
+    border: 2px solid #ffffff;
+    background-color: transparent;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 25px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 
 .btn-primary-outline,
 #learnMore2 {
