--- a/style2.css
+++ b/style2.css
@@ -161,9 +161,9 @@ svg {
     font-size: 22px;
 }
 .block {
+    width: 75%;
     margin-top:5%;
     margin-bottom:5%;
-    width:40%;
     border-bottom:4px solid #999;
 }
 .epicgg {
@@ -186,9 +186,9 @@ svg {
     text-decoration: underline;
 }
 .role {
-    margin-top:4%;
-    font-size:16px;
-    text-align: center;
+    margin-top:3%;
+    font-size:18px;
+    text-align: left;
     font-family: 'Raleway', sans-serif;
 }
 /* Hidden nav bar */
